{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 1188,
  "lineage": "e6579306-654a-289a-9c70-9ef0463b842a",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088fd024fe7aa5070",
            "arn": "arn:aws:ec2:eu-north-1:254652353999:instance/i-0124fb2272478845d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "profile-ec2-prod",
            "id": "i-0124fb2272478845d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "key-ec2-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-078bbd05297766906"
              }
            ],
            "primary_network_interface_id": "eni-078bbd05297766906",
            "private_dns": "ip-10-1-1-117.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.117",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:254652353999:key/787eb808-9f89-4f9f-9c9a-8670f0eec14d",
                "throughput": 125,
                "volume_id": "vol-0f2cb94f23ed0cfb0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a239b0e23b17bcd0",
            "tags": {
              "Name": "ec2-app-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "ec2-app-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08376eeda1d14cd07"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "i-0124fb2272478845d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.compute.aws_iam_instance_profile.ec2",
            "module.compute.aws_iam_role.ec2",
            "module.compute.aws_key_pair.ec2",
            "module.compute.data.aws_ami.ubuntu",
            "module.compute.tls_private_key.ec2",
            "module.networking.aws_security_group.eks_nodes",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024e80aa51520be21",
            "arn": "arn:aws:ec2:eu-north-1:254652353999:elastic-ip/eipalloc-024e80aa51520be21",
            "association_id": "eipassoc-00fbd178f8d4ef1e0",
            "domain": "vpc",
            "id": "eipalloc-024e80aa51520be21",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0c92659ccfe314b56",
            "private_dns": "ip-10-1-101-161.eu-north-1.compute.internal",
            "private_ip": "10.1.101.161",
            "public_dns": "ec2-16-192-47-42.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.192.47.42",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "eip-nat-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "eip-nat-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:internet-gateway/igw-08766e955bd722c8e",
            "id": "igw-08766e955bd722c8e",
            "owner_id": "254652353999",
            "region": "eu-north-1",
            "tags": {
              "Name": "igw-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "igw-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024e80aa51520be21",
            "association_id": "eipassoc-00fbd178f8d4ef1e0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e4773cdcc7906e5d",
            "network_interface_id": "eni-0c92659ccfe314b56",
            "private_ip": "10.1.101.161",
            "public_ip": "16.192.47.42",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ec81d56460bcddd",
            "tags": {
              "Name": "nat-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "nat-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:route-table/rtb-03de053086d6be9cd",
            "id": "rtb-03de053086d6be9cd",
            "owner_id": "254652353999",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4773cdcc7906e5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "rt-private-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "rtb-03de053086d6be9cd",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:route-table/rtb-01fb4a624ad24b250",
            "id": "rtb-01fb4a624ad24b250",
            "owner_id": "254652353999",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08766e955bd722c8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "rt-public-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "rtb-01fb4a624ad24b250",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbb146af470f611e",
            "region": "eu-north-1",
            "route_table_id": "rtb-03de053086d6be9cd",
            "subnet_id": "subnet-0a239b0e23b17bcd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f18d7517ae1101af",
            "region": "eu-north-1",
            "route_table_id": "rtb-03de053086d6be9cd",
            "subnet_id": "subnet-07de6716ab12faa1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a686839afe23a0",
            "region": "eu-north-1",
            "route_table_id": "rtb-01fb4a624ad24b250",
            "subnet_id": "subnet-01ec81d56460bcddd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018fca453cd08ae5d",
            "region": "eu-north-1",
            "route_table_id": "rtb-01fb4a624ad24b250",
            "subnet_id": "subnet-0944f6ea0192ca897"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:security-group/sg-07baeb0d1ed4fc68a",
            "description": "EKS cluster control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07baeb0d1ed4fc68a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTPS from VPC - nodes to API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-prod",
            "name_prefix": "",
            "owner_id": "254652353999",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "eks-cluster-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "sg-07baeb0d1ed4fc68a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:security-group/sg-08376eeda1d14cd07",
            "description": "EKS worker nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08376eeda1d14cd07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Allow HTTPS from control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Allow control plane to reach nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Node.js app port from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-nodes-prod",
            "name_prefix": "",
            "owner_id": "254652353999",
            "region": "eu-north-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "eks-nodes-prod",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "owned",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "eks-nodes-prod",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "owned",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "sg-08376eeda1d14cd07",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:subnet/subnet-0a239b0e23b17bcd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a239b0e23b17bcd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254652353999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "snet-private-prod-0",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "snet-private-prod-0",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "subnet-0a239b0e23b17bcd0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:subnet/subnet-07de6716ab12faa1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07de6716ab12faa1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254652353999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "snet-private-prod-1",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "snet-private-prod-1",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "subnet-07de6716ab12faa1f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:subnet/subnet-01ec81d56460bcddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ec81d56460bcddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254652353999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "snet-public-prod-0",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "snet-public-prod-0",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "subnet-01ec81d56460bcddd",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:subnet/subnet-0944f6ea0192ca897",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0944f6ea0192ca897",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254652353999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "snet-public-prod-1",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "snet-public-prod-1",
              "environment": "prod",
              "kubernetes.io/cluster/eks-prod-dr": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "subnet-0944f6ea0192ca897",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc/vpc-0af2190bc77f844e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f694a4e003f7c821",
            "default_route_table_id": "rtb-06c503d9aa87b7833",
            "default_security_group_id": "sg-0795d2e96a16059c5",
            "dhcp_options_id": "dopt-069872fdf52167c01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af2190bc77f844e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c503d9aa87b7833",
            "owner_id": "254652353999",
            "region": "eu-north-1",
            "tags": {
              "Name": "vpc-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpc-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpc-0af2190bc77f844e3",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-0bcb466bad7c4601e",
            "dns_entry": [
              {
                "dns_name": "vpce-0bcb466bad7c4601e-1n14rp74.ec2messages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0bcb466bad7c4601e-1n14rp74-eu-north-1a.ec2messages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0bcb466bad7c4601e-1n14rp74-eu-north-1b.ec2messages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "ec2messages.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z0038400CFC61SOF79VL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bcb466bad7c4601e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06f0165d065d46162",
              "eni-09e570d6572755fe7"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.ec2messages",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.216",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.125",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-ec2messages-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-ec2messages-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-0bcb466bad7c4601e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-0e5c672d252a53aca",
            "dns_entry": [
              {
                "dns_name": "vpce-0e5c672d252a53aca-n962vfh8.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0e5c672d252a53aca-n962vfh8-eu-north-1b.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0e5c672d252a53aca-n962vfh8-eu-north-1a.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "api.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z0630821OROF3KXS3HN3"
              },
              {
                "dns_name": "ecr.eu-north-1.api.aws",
                "hosted_zone_id": "Z06827631U9WEUE1CSW3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e5c672d252a53aca",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003cb164b4926533a",
              "eni-0c40f4d71aee5e275"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.ecr.api",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.186",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.21",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-ecr-api-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-ecr-api-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-0e5c672d252a53aca",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-07e51232cb60c708b",
            "dns_entry": [
              {
                "dns_name": "vpce-07e51232cb60c708b-fz5ubcv2.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-07e51232cb60c708b-fz5ubcv2-eu-north-1b.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-07e51232cb60c708b-fz5ubcv2-eu-north-1a.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "dkr.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z035905621BO7TIBWX8W9"
              },
              {
                "dns_name": "*.dkr.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z035905621BO7TIBWX8W9"
              },
              {
                "dns_name": "dkr-ecr.eu-north-1.on.aws",
                "hosted_zone_id": "Z06828212JPQQK33F0YLF"
              },
              {
                "dns_name": "*.dkr-ecr.eu-north-1.on.aws",
                "hosted_zone_id": "Z06828212JPQQK33F0YLF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07e51232cb60c708b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0703b85e080eac68d",
              "eni-0b9ed703378071aeb"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.ecr.dkr",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.76",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.230",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-ecr-dkr-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-ecr-dkr-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-07e51232cb60c708b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-0d31a3c3f556f04a9",
            "dns_entry": [
              {
                "dns_name": "vpce-0d31a3c3f556f04a9-x7l6ygmh.eks.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0d31a3c3f556f04a9-x7l6ygmh-eu-north-1b.eks.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0d31a3c3f556f04a9-x7l6ygmh-eu-north-1a.eks.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "eks.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z03522562GAHAQQUE3QRA"
              },
              {
                "dns_name": "eks.eu-north-1.api.aws",
                "hosted_zone_id": "Z06814262VWWAXZ67O588"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d31a3c3f556f04a9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023513e51a7bfeba2",
              "eni-0479a4bffa1c69bf4"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.eks",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.214",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.13",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-eks-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-eks-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-0d31a3c3f556f04a9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-0856e88cb9865170a",
            "cidr_blocks": [
              "52.95.170.0/23",
              "3.5.216.0/22",
              "52.95.169.0/24",
              "16.12.10.0/23",
              "16.12.9.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0856e88cb9865170a",
            "ip_address_type": "ipv4",
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-c3aa4faa",
            "private_dns_enabled": false,
            "region": "eu-north-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03de053086d6be9cd"
            ],
            "service_name": "com.amazonaws.eu-north-1.s3",
            "service_region": "eu-north-1",
            "state": "available",
            "tags": {
              "Name": "vpce-s3-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-s3-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-0856e88cb9865170a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-0f137fb73b166d12f",
            "dns_entry": [
              {
                "dns_name": "vpce-0f137fb73b166d12f-qxpn1obd.ssm.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0f137fb73b166d12f-qxpn1obd-eu-north-1b.ssm.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0f137fb73b166d12f-qxpn1obd-eu-north-1a.ssm.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "ssm.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z03590622MYP6Q621SUV2"
              },
              {
                "dns_name": "ssm.eu-north-1.api.aws",
                "hosted_zone_id": "Z0038459KF6ON1DJ6N5T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f137fb73b166d12f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04a48df04a9d3454a",
              "eni-0560d9692968b4088"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssm",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.230",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.207",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-ssm-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-ssm-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-0f137fb73b166d12f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:vpc-endpoint/vpce-068bfcc39db7cb6f6",
            "dns_entry": [
              {
                "dns_name": "vpce-068bfcc39db7cb6f6-b3lc94qi.ssmmessages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-068bfcc39db7cb6f6-b3lc94qi-eu-north-1a.ssmmessages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-068bfcc39db7cb6f6-b3lc94qi-eu-north-1b.ssmmessages.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "ssmmessages.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z06828648M3M0PFCO0ID"
              },
              {
                "dns_name": "ssmmessages.eu-north-1.api.aws",
                "hosted_zone_id": "Z03591301OJELLKMZS61Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-068bfcc39db7cb6f6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a37b3521a7864ad2",
              "eni-0ee548a847634c073"
            ],
            "owner_id": "254652353999",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-north-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07baeb0d1ed4fc68a"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssmmessages",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.179",
                "subnet_id": "subnet-0a239b0e23b17bcd0"
              },
              {
                "ipv4": "10.1.2.225",
                "subnet_id": "subnet-07de6716ab12faa1f"
              }
            ],
            "subnet_ids": [
              "subnet-07de6716ab12faa1f",
              "subnet-0a239b0e23b17bcd0"
            ],
            "tags": {
              "Name": "vpce-ssmmessages-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "vpce-ssmmessages-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "vpce-068bfcc39db7cb6f6",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_cluster",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.preserved_efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:254652353999:security-group/sg-06aa5fe420cc94c15",
            "description": "Allow NFS access to Jenkins EFS from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aa5fe420cc94c15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from Jenkins EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08376eeda1d14cd07"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-jenkins-prod",
            "name_prefix": "",
            "owner_id": "254652353999",
            "region": "eu-north-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "efs-jenkins-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "tags_all": {
              "Name": "efs-jenkins-prod",
              "environment": "prod",
              "managed-by": "terraform",
              "owner": "nagham",
              "project": "devops-multicloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af2190bc77f844e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "254652353999",
            "id": "sg-06aa5fe420cc94c15",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.networking.aws_security_group.eks_nodes",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}